--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 }
 .block_carousel .slidewrap {
     position: relative;
-    height: 0px;
+    height: 0;
     color: white;
     background-size: cover;
     background-position: 50% 50%;
@@ -30,7 +30,7 @@
     background: rgba(0,0,0,.4);
 }
 .block_carousel .slidewrap .text.multislide {
-    padding: 0 0 0 1em;
+    padding: 0 0 0 5px;
 }
 
 .block_carousel .slick-slide {
